[tool.poetry]
name = "elevatorbot"
version = "0.0.1"
description = "Elevator Management System"
authors = ["Dr-Blank <64108942+Dr-Blank@users.noreply.github.com>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [
    { include = "elevatorbot" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
